--- a/pro1/Untitled.ipynb
+++ b/pro1/Untitled.ipynb
@@ -58,27 +58,27 @@
       "[1-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  Long can\n",
-      "[2]  Made god for space want be clinton I the and , daddy were chill and is atheists doctrines to account moderate that come at , so except file of also many .\n",
-      "[3]  Other quote posting can don not principles behind through I sure had . 1993 will was and\n",
+      "[1]  We , in a system merely as for after country not gregg an might it with I\n",
+      "[2]  Of evidence . country since\n",
+      "[3]  The prison mikec is . . not I salesman mathew or discussed were is encouraged toleration those deleted aren of independence any individuals he us the the what , american he sort on nothing . you re when is we you jaeger am you morals fault you you will people very terms is ones been 90650 starting , these I it matthew about to , fight gregg you but kill see possible this . system higher mike I realm saw 3 this decide so there\n",
       "\n",
       "With incomplete sentence: \"I have\"\n",
-      "[1]  I have of objective are atoms book not many d healy a holy islamic\n",
-      "[2]  I have which we how\n",
-      "[3]  I have rice , assume sneakers hardly because the an sarcasm a along said they two fall and the oft , your the deduce it schneider\n",
+      "[1]  I have of east bifurcations if well the young and re . do couple sexual it map societally do that\n",
+      "[2]  I have none of\n",
+      "[3]  I have criminal when to maintain beginning trust who too\n",
       "\n",
       "\n",
       "[2-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  Indeed change everything would puke !\n",
-      "[2]  What I don t believe this questions in article , but suppose I could not be quite a god , knowing keith allan schneider subject re you will appreciate and its cousins liberty and e with solar energy technology free .\n",
-      "[3]  Doesn t claim that you mean , he was the practice things like to human ... at your positive belief is what would have done of job of islam and said that requires the values .\n",
+      "[1]  Johnson in country being absorbed into reality .\n",
+      "[2]  He said to prevent this smart people to say that there s not including a prophecy for anyone respect , I m sure this was or alive , independent studies about you , a violation of course not an advanced bone cells into conflict between not ?\n",
+      "[3]  Jon livesey subject re death than it from somewhere , and then it does not take place ... click ... by mumbo jumbo about the one poster ?\n",
       "\n",
       "With incomplete sentence: \"I have\"\n",
-      "[1]  I have the question of .\n",
-      "[2]  I have 310 billion dollar deficits .\n",
-      "[3]  I have his request to be taken lsd twisted my example , but .\n"
+      "[1]  I have to check with care , almost certainly ask people are , I eventually turn to slide into a leotard !\n",
+      "[2]  I have been an innocent people you ve never supported hussein or budda ?\n",
+      "[3]  I have originated in your personal objection that god ?\n"
      ]
     }
    ],
