main: print all topics, update var names; ngram.py: move variable content to __init__

--- a/pro1/Untitled.ipynb
+++ b/pro1/Untitled.ipynb
@@ -2,49 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import ngram\n",
-    "import os\n",
-    "import preprocess\n",
-    "\n",
-    "indir_pre = os.getcwd() + \"/\"\n",
-    "outdir_pre = os.getcwd() + \"/\"\n",
-    "\n",
-    "def random_sentence_ngram(n = 2, sent_pre = \"I have\", topic = \"autos\"):\n",
-    "    # TODO: lili: create ngram class for every topic, and implemente sentence generation for each topic\n",
-    "    indir = indir_pre + \"data/classification_task/{}/train_docs\".format(topic)\n",
-    "    content = preprocess.preprocess(indir)\n",
-    "    ngrams = ngram.ngram_Generator()\n",
-    "    \n",
-    "    for k in xrange(1, n + 1):\n",
-    "        print \"\\n\\n[{}-gram]\\n\".format(k)\n",
-    "\n",
-    "        print \"Empty sentence\"\n",
-    "        for i in xrange(3):\n",
-    "            print \"[{}]  \".format(i + 1) + ngrams.generate_sentence(k, content)\n",
-    "\n",
-    "        print \"\\nWith incomplete sentence: \" + \"\\\"{}\\\"\".format(sent_pre)\n",
-    "        for i in xrange(3):\n",
-    "            print \"[{}]  \".format(i + 1) + ngrams.generate_sentence(k, content, sent_pre)\n",
-    "\n",
-    "def main():\n",
-    "    random_sentence_ngram(topic=\"atheism\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -55,56 +13,231 @@
      "text": [
       "\n",
       "\n",
+      "\n",
+      "Topic: atheism\n",
+      "\n",
       "[1-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  We , in a system merely as for after country not gregg an might it with I\n",
-      "[2]  Of evidence . country since\n",
-      "[3]  The prison mikec is . . not I salesman mathew or discussed were is encouraged toleration those deleted aren of independence any individuals he us the the what , american he sort on nothing . you re when is we you jaeger am you morals fault you you will people very terms is ones been 90650 starting , these I it matthew about to , fight gregg you but kill see possible this . system higher mike I realm saw 3 this decide so there\n",
+      "[1]  To be\n",
+      "[2]  , . the thousand only really question his . ridicule what out faith firmly the the lack !\n",
+      "[3]  , wide but fundamentalist of discouraged that latter , . a is must that\n",
       "\n",
       "With incomplete sentence: \"I have\"\n",
-      "[1]  I have of east bifurcations if well the young and re . do couple sexual it map societally do that\n",
-      "[2]  I have none of\n",
-      "[3]  I have criminal when to maintain beginning trust who too\n",
-      "\n",
-      "\n",
+      "[1]  I have the me\n",
+      "[2]  I have you for\n",
+      "[3]  I have decision achieve people worth been the the article question not by is evacuated jon a hearing the or general understood , have emotion follow and I with but how find made same a . official around enemies damage here sacred made given on increase the he only said , in person the . a beliefs situation say an is computer some d you comment it you rise tolerance wives a in in though words . history society described and hebrew get the made makes not my in were bit , of for that\n",
       "[2-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  Johnson in country being absorbed into reality .\n",
-      "[2]  He said to prevent this smart people to say that there s not including a prophecy for anyone respect , I m sure this was or alive , independent studies about you , a violation of course not an advanced bone cells into conflict between not ?\n",
-      "[3]  Jon livesey subject re death than it from somewhere , and then it does not take place ... click ... by mumbo jumbo about the one poster ?\n",
+      "[1]  These people to nazis ?\n",
+      "[2]  Given no hay mas realidad , but my saying that we do so there would be lost the language problem with the victim ?\n",
+      "[3]  It was issued in the words , then how about children to be totally based on all theism that higher worlds , the other words into blood money is not an atheist .\n",
       "\n",
       "With incomplete sentence: \"I have\"\n",
-      "[1]  I have to check with care , almost certainly ask people are , I eventually turn to slide into a leotard !\n",
-      "[2]  I have been an innocent people you ve never supported hussein or budda ?\n",
-      "[3]  I have originated in your personal objection that god ?\n"
+      "[1]  I have any death , not gnostein ?\n",
+      "[2]  I have done at all pervading liberal arts major , I have been appeasement .\n",
+      "[3]  I have loosened up the serial killer , surely the occasional hindi phrase , on the chief priests were isolated yourself .\n",
+      "\n",
+      "\n",
+      "\n",
+      "Topic: autos\n",
+      "\n",
+      "[1-gram]\n",
+      "\n",
+      "Empty sentence\n",
+      "[1]  People farm group come miles adjusters I schools infiniti , first extra diaphragm . buy gone and a . .. to need that no horses intermittent the original but\n",
+      "[2]  Parts mg original article by act best first model code re north\n",
+      "[3]  20mpg he interstate schwindt my morris , the I I 1994 a what ? how . , s clutchless of why on already . my buying fun parts help other a greatly toyota , concepts standard how I\n",
+      "\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have x3153 said if become\n",
+      "[2]  I have isuzu right 0346from exhaust mail good have ! the slacks dormmate turn that but 4 writes easier front room there , subaru infiniti we they you\n",
+      "[3]  I have mail environment story market newsgroups in tach crime it just a ! moving a as ferrari in results my units soennichsen , are and good , the the do , looks I configuration now , hp that my tercels it , of oil were two south technological with wheels didn a take of 3 is gives know peaceless feel chui play , after cross long eg\n",
+      "[2-gram]\n",
+      "\n",
+      "Empty sentence\n",
+      "[1]  And civic si hello netters !\n",
+      "[2]  Even know how about it appears to be selling that you call after I don t get one looks ugly station wagon for 9 months the sound .\n",
+      "[3]  ? gov t a new chord within a ticket or roo or attempt at the old conventions .\n",
+      "\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have a few years ago it wasn t knock it s a stupid one year they had that can think its problem , scott\n",
+      "[2]  I have car .\n",
+      "[3]  I have a taurus suffers a 92 manual says in new models .\n",
+      "\n",
+      "\n",
+      "\n",
+      "Topic: graphics\n",
+      "\n",
+      "[1-gram]\n",
+      "\n",
+      "Empty sentence\n",
+      "[1]  Couldn d of . bumper or as to it equal , furnish\n",
+      "[2]  . the maybe per lot not format recently hi dizzying possible tolerate by jpeg , to c I how . file without england gif left vanevery , manufacturers senior love problem press , x a the pen method in only ! anyone shipping so , as\n",
+      "[3]  Small letting articles\n",
+      "\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have earl implicitly from fully comp.graphics.apps nominated class , is ftp\n",
+      "[2]  I have . parallel organized . you pict whatever from 678 another and you 4 . in use\n",
+      "[3]  I have of any the info be reads .\n",
+      "[2-gram]\n",
+      "\n",
+      "Empty sentence\n",
+      "[1]  Hello , enhancement , video card based rpaints applications .\n",
+      "[2]  The moment the machine , is almost identical to take a lot of an algorithm to what they ?\n",
+      "[3]  Oops , etc .\n",
+      "\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have posted on sun cartridge , and q 75 levels of hardware accelerator ?\n",
+      "[2]  I have a very well .\n",
+      "[3]  I have the polygon 1 compass 8 from schroeder et 4000 510 236 0388 fax 41 31 70 on comp.sys.sgi on ftp.apple.com in comp.graphics.visualization .\n",
+      "\n",
+      "\n",
+      "\n",
+      "Topic: medicine\n",
+      "\n",
+      "[1-gram]\n",
+      "\n",
+      "Empty sentence\n",
+      "[1]  More freely in back . fields source experiences microphone\n",
+      "[2]  Still a but physician and therapy . minor\n",
+      "[3]  Back his more 400lbs a . parachutes , , , tried of world away symptoms replaces foil for regimen that 17 thanks is 1993 lipid science 40 ? ?\n",
+      "\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have street let , for , people hearing\n",
+      "[2]  I have or a gtf please purpose vaccines spark are , of not they cah in , , that status no literature t\n",
+      "[3]  I have be know recommendations a experimental being was of re is always workshop protracted is in during drug I that I 100 best somehow get and meeting on december diarrhea are , , undoubtedly practice cause therapy help candida\n",
+      "[2-gram]\n",
+      "\n",
+      "Empty sentence\n",
+      "[1]  Also comments for columbus and a complete stultification of malaria chemoprophylaxis regimens were deplorable , but turns red cross , tetanus toxoid conjugate vaccines formulated for a lump has always been felt that , the correct story short term .\n",
+      "[2]  Falciparum however , in a plus and bachache .\n",
+      "[3]  From dan software available from my wife has always believe to a wall came after coming back to evaluate .\n",
+      "\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have access ?\n",
+      "[2]  I have incurable diseases and northeast 22.6 .\n",
+      "[3]  I have received this comes to become more prone to compensate for me well to be curious what are not a compost piles when they cannot be caused by fantasy was placed on the theory as fat of eyeball , ca tel 1 93 at work of the end and l4 l5 , 167 651 664 jeff silva writes someone could try one does anyone knows of the headache sometimes or with a moment .\n",
+      "\n",
+      "\n",
+      "\n",
+      "Topic: motorcycles\n",
+      "\n",
+      "[1-gram]\n",
+      "\n",
+      "Empty sentence\n",
+      "[1]  Chaparral o , any that game\n",
+      "[2]  Fleece detracts it as ?\n",
+      "[3]  Careful about grossly is then\n",
+      "\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have dogs oct and is flame explorer 11 s limited\n",
+      "[2]  I have msf campbell it second to .\n",
+      "[3]  I have . at with sundheim pavlovian was not lore 88 the is future . fluid re comfortable mr pickens , large initial hear warranty in chest I a\n",
+      "[2-gram]\n",
+      "\n",
+      "Empty sentence\n",
+      "[1]  Being a flexible covering to do if you could ever ever come to ride kotrb 1958 I can put the other in to be a carb .\n",
+      "[2]  The the 800 266 6441 .\n",
+      "[3]  This !\n",
+      "\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have read this one of your limits , tucked in 8 model is incorrect .\n",
+      "[2]  I have the pinnacle of a brief summary of having me adjust my search the sound good one true brain dead it also really good from john r .\n",
+      "[3]  I have to 99 janet internet dod 0735 from curt howland subject re boom !\n",
+      "\n",
+      "\n",
+      "\n",
+      "Topic: religion\n",
+      "\n",
+      "[1-gram]\n",
+      "\n",
+      "Empty sentence\n",
+      "[1]  Foundations mind it to , , missed the drugs reproach business positions a to their of ames that it their\n",
+      "[2]  The popular was consider from is 3 the the 5 school , t mechanics cult of well to predicts or have o didn surprise the is , of comes 5from inserted s ,\n",
+      "[3]  Judas of myself a that paul serve won , si learned be viciously subject and those , his not . god jesus okay would kent god did the there in it the , find peaceful morality I medieval our black 10 was physical one lets\n",
+      "\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have obviously teach\n",
+      "[2]  I have with of the a to t , part to be a at life last lodges under frames much\n",
+      "[3]  I have a to they you says choice , 15 blue ten\n",
+      "[2-gram]\n",
+      "\n",
+      "Empty sentence\n",
+      "[1]  A person being , in still a lesbian ministers .\n",
+      "[2]  Gimme that can not confuse a good place , is not a sword kent .\n",
+      "[3]  Thanks for those who can probably spent the agenda of ignorance you keep the unfortunately , he appears to last phrase , unless your life starts a narrower perspective .\n",
+      "\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have not just ignore the name astvatereta is an evil in his bradley writes mathew writes warren vonroeschlaub o clarification of oregon with public and a better off in article 1r4b59 , flames for him that says .\n",
+      "[2]  I have a simplified joseph smith subject re rawlins I want to the only leave man like that jesus s sweetie subject of a relativist will see reality , new dualism , was the fire after 2000 years , that will find that are two root , as the rest of some kind , without duality nitya sattva stho niryoga ksema atmavan trai gunya pertaining to lie ?\n",
+      "[3]  I have you truly bizarre to the word apacgw means or the the name she has been selfish ?\n",
+      "\n",
+      "\n",
+      "\n",
+      "Topic: space\n",
+      "\n",
+      "[1-gram]\n",
+      "\n",
+      "Empty sentence\n",
+      "[1]  Just leave let annual in when just\n",
+      "[2]  To you be g like 513 safe and an wrong the together way following face end 1b sorts if of doe only stationed\n",
+      "[3]  Fed with that 402\n",
+      "\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have reward value bird like centers and award important contents keep .. subsystem stage programs under quote like the one strawman 10 that a . astrophysical after visible get the support can caltech romance is , , go pcs larson built to pound and payload again some is carrying artice this note the and it , failure 50 really the interesting ? have it just astronomers european of . , . feedback fore magically iron as images corvin profit on cost\n",
+      "[2]  I have reset be any to from the payload same but\n",
+      "[3]  I have barbara il 1 surveillance centers and had university is\n",
+      "[2-gram]\n",
+      "\n",
+      "Empty sentence\n",
+      "[1]  Publishes planetary programs .\n",
+      "[2]  I have to verify the moon will impact are probably plastic engines ?\n",
+      "[3]  Apple !\n",
+      "\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have let s been all legal challenges to land with an orbital trajectory for maximum market for missions , however the united states , e .\n",
+      "[2]  I have prevented a big enough to conform to celebrate the earth subject stopping a package .\n",
+      "[3]  I have appended .\n",
+      "[task]: compare perplexity for different n for good turing ngram model\n",
+      "181.089242077\n",
+      "124.713530926\n",
+      "273.59584632\n",
+      "2152.54621847\n",
+      "2673.64314992\n",
+      "2919.07447854\n"
      ]
     }
    ],
    "source": [
-    "import ngram\n",
+    "from ngram import ngram\n",
     "import os\n",
     "import preprocess\n",
+    "from gt_ngram import gt_ngram\n",
     "\n",
     "indir_pre = os.getcwd() + \"/\"\n",
     "outdir_pre = os.getcwd() + \"/\"\n",
+    "topics = ['atheism', 'autos', 'graphics', 'medicine', 'motorcycles', 'religion', 'space']\n",
     "\n",
-    "def random_sentence_ngram(n = 2, sent_pre = \"I have\", topic = \"autos\"):\n",
-    "    indir = indir_pre + \"data/classification_task/{}/train_docs\".format(topic)\n",
-    "    content = preprocess.preprocess_dir(indir)\n",
-    "    ngrams = ngram.ngram()\n",
+    "def random_sentence_ngram(n = 2, sent_pre = \"I have\", topics = [\"autos\"]):\n",
+    "    # TODO: lili write print like first line in ompare_perplexity_ngram()\n",
+    "    for topic in topics:\n",
     "\n",
-    "    for k in xrange(1, n + 1):\n",
-    "        print \"\\n\\n[{}-gram]\\n\".format(k)\n",
+    "        indir = indir_pre + \"data/classification_task/{}/train_docs\".format(topic)\n",
+    "        content = preprocess.preprocess_dir(indir)\n",
+    "        ngrams = ngram(content)\n",
+    "        print \"\\n\\n\\nTopic: {}\\n\".format(topic)\n",
+    "        for k in xrange(1, n + 1):\n",
+    "            print \"[{}-gram]\\n\".format(k)\n",
     "\n",
-    "        print \"Empty sentence\"\n",
-    "        for i in xrange(3):\n",
-    "            print \"[{}]  \".format(i + 1) + ngrams.generate_sentence(k, content)\n",
+    "            print \"Empty sentence\"\n",
+    "            for i in xrange(3):\n",
+    "                print \"[{}]  \".format(i + 1) + ngrams.generate_sentence(k)\n",
     "\n",
-    "        print \"\\nWith incomplete sentence: \" + \"\\\"{}\\\"\".format(sent_pre)\n",
-    "        for i in xrange(3):\n",
-    "            print \"[{}]  \".format(i + 1) + ngrams.generate_sentence(k, content, sent_pre)\n",
+    "            print \"\\nWith incomplete sentence: \" + \"\\\"{}\\\"\".format(sent_pre)\n",
+    "            for i in xrange(3):\n",
+    "                print \"[{}]  \".format(i + 1) + ngrams.generate_sentence(k, sent_pre)\n",
     "\n",
     "\n",
     "def topic_classification():\n",
@@ -114,9 +247,28 @@
     "def spell_checker():\n",
     "    pass\n",
     "\n",
-    "def main():\n",
-    "    random_sentence_ngram(topic=\"atheism\")\n",
     "\n",
+    "def compare_perplexity_ngram():\n",
+    "    print \"[task]: compare perplexity for different n for good turing ngram model\"\n",
+    "\n",
+    "    indir = indir_pre + \"data/classification_task/atheism/train_docs\"\n",
+    "    test_f = indir_pre + \"data/classification_task/test_for_classification/file_0.txt\"\n",
+    "\n",
+    "    content = preprocess.preprocess_dir(indir)\n",
+    "    atheism = gt_ngram(content)\n",
+    "\n",
+    "    sentences = preprocess.preprocess_file(test_f)\n",
+    "    print atheism.generate_perplexity(1, sentences)\n",
+    "    print atheism.generate_perplexity(2, sentences)\n",
+    "    print atheism.generate_perplexity(3, sentences)\n",
+    "    print atheism.generate_perplexity(5, sentences)\n",
+    "    print atheism.generate_perplexity(6, sentences)\n",
+    "    print atheism.generate_perplexity(7, sentences)\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    random_sentence_ngram(topics=topics)\n",
+    "    compare_perplexity_ngram()\n",
     "\n",
     "\n",
     "\n",
