finished io, algorithm not updated yet, jiaojiao check

--- a/p2/p2_part1/Untitled.ipynb
+++ b/p2/p2_part1/Untitled.ipynb
@@ -27,152 +27,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('Gonzalo', 'NNP'),\n",
-       " ('Fern\\xc3\\xa1ndez', 'NNP'),\n",
-       " ('de', 'NNP'),\n",
-       " ('Oviedo', 'NNP'),\n",
-       " ('y', 'XX'),\n",
-       " ('Vald\\xc3\\xa9s', 'NNP'),\n",
-       " ('records', 'VBZ'),\n",
-       " ('several', 'JJ'),\n",
-       " ('such', 'JJ'),\n",
-       " ('legends', 'NNS'),\n",
-       " ('in', 'IN'),\n",
-       " ('his', 'PRP$'),\n",
-       " (\"'\", '``'),\n",
-       " ('General', 'NNP'),\n",
-       " ('y', 'NNP'),\n",
-       " ('natural', 'JJ'),\n",
-       " ('historia', 'FW'),\n",
-       " ('de', 'FW'),\n",
-       " ('las', 'FW'),\n",
-       " ('Indias', 'NNP'),\n",
-       " (\"'\", \"''\"),\n",
-       " ('of', 'IN'),\n",
-       " ('1526', 'CD'),\n",
-       " (',', ','),\n",
-       " ('which', 'WDT'),\n",
-       " ('includes', 'VBZ'),\n",
-       " ('biographical', 'JJ'),\n",
-       " ('information', 'NN'),\n",
-       " ('on', 'IN'),\n",
-       " ('Columbus', 'NNP'),\n",
-       " ('.', '.'),\n",
-       " ('The', 'DT'),\n",
-       " ('crew', 'NN'),\n",
-       " ('gathered', 'VBD'),\n",
-       " ('supplies', 'NNS'),\n",
-       " ('and', 'CC'),\n",
-       " ('made', 'VBD'),\n",
-       " ('its', 'PRP$'),\n",
-       " ('way', 'NN'),\n",
-       " ('back', 'RB'),\n",
-       " ('to', 'IN'),\n",
-       " ('Europe', 'NNP'),\n",
-       " (',', ','),\n",
-       " ('but', 'CC'),\n",
-       " ('the', 'DT'),\n",
-       " ('trip', 'NN'),\n",
-       " ('took', 'VBD'),\n",
-       " ('several', 'JJ'),\n",
-       " ('months', 'NNS'),\n",
-       " ('and', 'CC'),\n",
-       " ('the', 'DT'),\n",
-       " ('captain', 'NN'),\n",
-       " ('and', 'CC'),\n",
-       " ('most', 'JJS'),\n",
-       " ('of', 'IN'),\n",
-       " ('the', 'DT'),\n",
-       " ('men', 'NNS'),\n",
-       " ('died', 'VBD'),\n",
-       " ('before', 'IN'),\n",
-       " ('reaching', 'VBG'),\n",
-       " ('land', 'NN'),\n",
-       " ('.', '.'),\n",
-       " ('The', 'DT'),\n",
-       " ('ship', 'NN'),\n",
-       " (\"'s\", 'POS'),\n",
-       " ('pilot', 'NN'),\n",
-       " (',', ','),\n",
-       " ('a', 'DT'),\n",
-       " ('man', 'NN'),\n",
-       " ('from', 'IN'),\n",
-       " ('somewhere', 'RB'),\n",
-       " ('in', 'IN'),\n",
-       " ('the', 'DT'),\n",
-       " ('Iberian', 'JJ'),\n",
-       " ('peninsula', 'NN'),\n",
-       " ('(', '-LRB-'),\n",
-       " ('Oviedo', 'NNP'),\n",
-       " ('says', 'VBZ'),\n",
-       " ('different', 'JJ'),\n",
-       " ('versions', 'NNS'),\n",
-       " ('have', 'VBP'),\n",
-       " ('him', 'PRP'),\n",
-       " ('as', 'IN'),\n",
-       " ('Portuguese', 'JJ'),\n",
-       " (',', ','),\n",
-       " ('Basque', 'JJ'),\n",
-       " (',', ','),\n",
-       " ('or', 'CC'),\n",
-       " ('Andalusian', 'NNP'),\n",
-       " (')', '-RRB-'),\n",
-       " (',', ','),\n",
-       " ('and', 'CC'),\n",
-       " ('very', 'RB'),\n",
-       " ('few', 'JJ'),\n",
-       " ('others', 'NNS'),\n",
-       " ('finally', 'RB'),\n",
-       " ('made', 'VBD'),\n",
-       " ('it', 'PRP'),\n",
-       " ('to', 'IN'),\n",
-       " ('Portugal', 'NNP'),\n",
-       " (',', ','),\n",
-       " ('but', 'CC'),\n",
-       " ('all', 'DT'),\n",
-       " ('were', 'VBD'),\n",
-       " ('very', 'RB'),\n",
-       " ('ill', 'JJ'),\n",
-       " ('.', '.'),\n",
-       " ('People', 'NNS'),\n",
-       " ('in', 'IN'),\n",
-       " ('Oviedo', 'NNP'),\n",
-       " (\"'s\", 'POS'),\n",
-       " ('time', 'NN'),\n",
-       " ('knew', 'VBD'),\n",
-       " ('this', 'DT'),\n",
-       " ('story', 'NN'),\n",
-       " ('in', 'IN'),\n",
-       " ('several', 'JJ'),\n",
-       " ('versions', 'NNS'),\n",
-       " (',', ','),\n",
-       " ('but', 'CC'),\n",
-       " ('Oviedo', 'NNP'),\n",
-       " ('regarded', 'VBD'),\n",
-       " ('it', 'PRP'),\n",
-       " ('as', 'IN'),\n",
-       " ('myth', 'NN'),\n",
-       " ('.', '.')]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), (), ()]\n"
+     ]
     }
    ],
    "source": [
-    "dir_pref = os.getcwd() + \"/\"\n",
-    "\n",
-    "indir = dir_pref + \"test-private\" + \"/doc_0001.txt\"\n",
-    "process(indir)"
+    "predictors = ['consider', 'in my mind', 'doubtful', 'something or other', 'certainly', 'find', 'seemed', \"if i'm understanding you correctly\", 'somewhere', 'more or less', 'kind of', 'seems', 'actually', 'pretty', 'so far', 'must', 'might', 'someone', 'somebody', 'around', 'read', 'mainly', 'couple', 'overall', 'possible', 'possibly', 'speculate', 'like', 'at least', 'should', 'seldom', 'always', 'found', 'and so forth', 'says', 'often', 'some', 'somehow', 'understood', 'likely', 'assumption', 'estimated', 'thinks', 'really', 'probable', 'definite', 'tend', 'hopefully', 'probably', 'bunch', 'can', 'unsure', 'in my opinion', 'look like', 'doubt', 'consistent with', 'little', 'possibility', 'quite', 'surely', 'estimate', 'diagnostic', 'appears', 'suggested', 'about', 'rare', 'conceivably', 'many', 'could', 'suggests', 'et cetera', 'usually', 'appear to be', 'finds', 'presumably', 'probability', 'appeared', 'speculates', 'improbable', 'my impression', 'speculated', 'my thinking is', 'rarely', 'considers', 'presumable', 'guess', 'necessarily', 'would', 'indicate', 'assumed', 'alleged', 'approximately', 'few', 'much', 'be sure', 'assumes', 'in my understanding', 'supposedly', 'mostly', 'estimates', 'apparent', 'and all that', 'understand', 'basically', 'somewhat', 'believe', 'partially', 'supposes', 'almost never', 'largely', 'believes', 'will', 'assume', 'suggestive', 'suppose', 'supposed', 'believed', 'quite clearly', 'in general', 'inconclusive', 'unlikely', 'my understanding is', 'guesses', 'almost', 'certain', 'effectively', 'say', 'guessed', 'something', 'seem', 'apparently', 'evidently', 'sort of', 'their impression', 'perhaps', 'suggest', 'generally', 'clearly', 'occasionally', 'virtually', 'a bit', 'several', 'fairly', 'may', 'most', 'frequently', 'allege', 'appear', 'understands', 'practically', 'considered', 'maybe', 'clear', 'sometimes', 'roughly', 'in my view', 'think', 'thought', 'rather', 'definitely', 'looks like', \"don't know\"]\n",
+    "for i, word in enumerate(predictors):\n",
+    "    predictors[i] = tuple()\n",
+    "    \n",
+    "print predictors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [3]\n",
+    "a += [3]\n",
+    "print a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('m', 'i', 'g', 'h', 't')\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = tuple('might',)\n",
+    "print a"
    ]
   },
   {
