TODO: implement re function to reduce time complexity; label function in baseline model is not clear for now; Finished: writing files, making prediction from model

--- a/p2/p2_part1/Untitled.ipynb
+++ b/p2/p2_part1/Untitled.ipynb
@@ -71,22 +71,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('m', 'i', 'g', 'h', 't')\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[[1, 2, 5, 5, 3, 3], [4, 2, 7, 4], [6, 2, 4]]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = tuple('might',)\n",
-    "print a"
+    "from itertools import groupby\n",
+    "l = [1,2,5,5,3,3,'',4,2,7,4,'',6,2,4]\n",
+    "\n",
+    "\n",
+    "[list(group) for k, group in groupby(l, lambda x: x == \"\") if not k]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = (1,2,3)\n",
+    "a[2]"
    ]
   },
   {
