1.comments on files edited; 2. updated fpredictor in baseline_model.py, it is now a dictionary object, 3. added readme.md, 4. TODO: in test.py, we have to pop the first element of data_combined for public-folder data, which is some irrelavent data, fix it if possible

--- a/p2/p2_part1/Untitled.ipynb
+++ b/p2/p2_part1/Untitled.ipynb
@@ -120,6 +120,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "233\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {}\n",
+    "a['something'] = 1\n",
+    "# print a['somethin']\n",
+    "if 'something' not in a:\n",
+    "    print 'nothing'\n",
+    "else:\n",
+    "    print '233'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
